--- a/Bootcamp Desenvolvedor Business Intelligence da IGTI/Módulo 4 - Relatórios e Dashboards.ipynb
+++ b/Bootcamp Desenvolvedor Business Intelligence da IGTI/Módulo 4 - Relatórios e Dashboards.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ee849ea0",
+   "id": "abe23fd6",
    "metadata": {},
    "source": [
     "<center><img width=\"25%\" src=\"https://www.camaramirimdoce.sc.gov.br/media/noticia/resumo-da-sessao-10-06-2019-111.png?w=848&h=450&t=P&c=f0f0f0&q=80&v=2\"></center>\n",
@@ -11,18 +11,28 @@
     "\n",
     "<br>\n",
     "\n",
-    "# Biblioteca Statsmodels\n",
+    "# Módulo 4 - Relatórios e Dashboards\n",
     "\n",
     "<br>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ecafbb1f",
+   "cell_type": "markdown",
+   "id": "5a88614d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# **Sumário:**\n",
+    "1. [Capítulo 1: Definição e Fundamentos de BI](#Capítulo-1:-Definição-e-Fundamentos-de-BI)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18124072",
+   "metadata": {},
+   "source": [
+    "### **Capítulo 1: Definição e Fundamentos de BI** \n",
+    "[&#x1F53C;](#Sumário:) Clique para voltar para o sumário"
+   ]
   }
  ],
  "metadata": {
