--- a/Ciências de Dados da Hashtag/Ciências de Dados.ipynb
+++ b/Ciências de Dados da Hashtag/Ciências de Dados.ipynb
@@ -919,11 +919,11 @@
     "    modelo.score(X.values.reshape(-1, 1),y)\n",
     "<br>\n",
     "\n",
-    "##### Coeficiente linear  \n",
+    "##### Gerando o coeficiente linear, que é representado pelo valor 'b' na equação da reta\n",
     "    modelo.intercept_\n",
     "<br>\n",
     "\n",
-    "##### Coeficiente angular\n",
+    "##### Gerando o coeficiente angular \"a\" é o número que acompanha a variável \"x\" na equação da reta. Ele indica a inclinação da reta em relação ao eixo x.\n",
     "    modelo.coef_[0]\n",
     "<br>\n",
     "\n",
@@ -942,6 +942,89 @@
     "\n",
     "##### Analisando os erros do modelo em porcentagem\n",
     "    mean_absolute_percentage_error (X, mod_y)) * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b71845ec",
+   "metadata": {},
+   "source": [
+    "### Classificador linear Perceptron dos modelos lineares da biblioteca scikit-learn <br>\n",
+    "> https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.Perceptron.html#sklearn.linear_model.Perceptron <br>\n",
+    "##### No aprendizado de máquina , o perceptron (ou neurônio de McCulloch-Pitts ) é um algoritmo para aprendizado supervisionado de classificadores binários . Um classificador binário é uma função que pode decidir se uma entrada, representada por um vetor de números, pertence ou não a alguma classe específica. É um tipo de classificador linear , ou seja, um algoritmo de classificação que faz suas previsões com base em uma função preditora linear combinando um conjunto de pesos com o vetor de características .\n",
+    "\n",
+    "<img width=\"35%\" src=\"_imagens/perceptron.png\">\n",
+    "\n",
+    "##### \"w0 + w1.x + w2.y = 0\" é uma equação linear que representa uma reta em um espaço bidimensional (forma geral da equação de uma reta), onde w0, w1 e w2 são os coeficientes da equação. Essa equação é conhecida como a forma geral de uma equação linear em duas variáveis. A variável x representa a coordenada no eixo x e a variável y representa a coordenada no eixo y. Esses coeficientes representam os pesos atribuídos a cada variável na equação. O coeficiente w0 é o termo independente, que não depende de nenhuma variável. O coeficiente w1 é o peso atribuído à variável x e o coeficiente w2 é o peso atribuído à variável y. <br>\n",
+    "\n",
+    "##### A diferença entre a forma geral da equação de uma reta e a forma de y = ax + b está na representação dos coeficientes. Na forma geral, os coeficientes w0, w1 e w2 representam a inclinação em relação aos eixos x e y, enquanto na forma de y = ax + b, os coeficientes a e b representam diretamente a inclinação e o ponto de interseção no eixo y. <br>\n",
+    "\n",
+    "##### A equação geral de uma reta é dada por w0 + w1.x + w2.y = 0, onde w0, w1 e w2 são constantes e x e y são as coordenadas dos pontos na reta. Para encontrar o coeficiente angular (a) da reta a partir dessa equação, você pode seguir os seguintes passos:\n",
+    "* Isolando o termo w2.y na equação, temos: w2.y = -w0 - w1.x\n",
+    "* Dividindo toda a equação por w2, temos: y = (-w0/w2) - (w1/w2).x\n",
+    "##### Comparando essa equação com a forma y = ax + b, podemos ver que o coeficiente angular (a) é dado por -(w1/w2). Portanto, para encontrar o coeficiente angular de uma reta a partir da sua equação na forma geral, você pode calcular -(w1/w2). <br>\n",
+    "\n",
+    "### <u>Códigos</u> <br>\n",
+    "\n",
+    "##### Equação da reta é dada por: w0 + w1.x + w2.y = 0 <br>\n",
+    "\n",
+    "##### Importação das bibliotecas\n",
+    "    from sklearn.linear_model import Perceptron\n",
+    "<br>\n",
+    "\n",
+    "##### Definição dos valores de X e Y\n",
+    "    var_X = df_dados.ColunaX ou df_dados['Coluna1', 'Coluna2'] ou array\n",
+    "    var_y = df_dados.ColunaY ou df_dados['Coluna1', 'Coluna2'] ou array\n",
+    "<br>\n",
+    "\n",
+    "##### Criação do modelo\n",
+    "    modelo = Perceptron(tol=1e-3, random_state=0)\n",
+    "<br>\n",
+    "\n",
+    "##### Ajustando o modelo \n",
+    "    modelo.fit(var_X, var_y)\n",
+    "<br>\n",
+    "\n",
+    "##### Resultado do modelo (Em porcentagem) = Significa o quanto o modelo está \"acertando\"\n",
+    "    modelo.score(var_X,var_y)\n",
+    "<br>\n",
+    "\n",
+    "##### Gerando o coeficiente linear, que é representado pelo valor 'b' na equação da reta\n",
+    "##### w0 = modelo.intercept_\n",
+    "    modelo.intercept_\n",
+    "<br>\n",
+    "\n",
+    "##### Gerando o coeficiente angular \"a\" é o número que acompanha a variável \"x\" na equação da reta. Ele indica a inclinação da reta em relação ao eixo x.\n",
+    "##### w1 = modelo.coef_[0][0]\n",
+    "##### w2 = modelo.coef_[0][1]\n",
+    "    modelo.coef_[0][0]\n",
+    "    modelo.coef_[0][1]\n",
+    "<br>\n",
+    "\n",
+    "##### Utilização dos dois coeficientes para calcular a equação da reta\n",
+    "    mod_x = np.arange(Nr,Nr) \n",
+    "    mod_y = (- modelo.intercept_ - modelo.coef_[0][0] * mod_x)/modelo.coef_[0][1]\n",
+    "<br>\n",
+    "\n",
+    "##### Calculo de como chegou ao mod_y:\n",
+    "    w0 + w1.x + w2.y = 0\n",
+    "    w2.y = - w0 - w1.x\n",
+    "    y = (- w0 - w1.x) / w2\n",
+    "    y = (- modelo.intercept_ - modelo.coef_[0][0] * mod_x)/modelo.coef_[0][1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6672c8f1",
+   "metadata": {},
+   "source": [
+    "### Modelo de classificação: <br>\n",
+    "\n",
+    "| Transação | Modelo | Modelo | \n",
+    "| --- | --- | --- | \n",
+    "| --- | Não é fraude (+) | É fraude (-) |\n",
+    "| Não é fraude (+) | OK (V +) | Golpe (F -) |\n",
+    "| É fraude (-) | Perdeu $ (F +) | OK (V -) |"
    ]
   },
   {
