--- a/Ciências de Dados da Hashtag/Projeto Hashtag - Criando uma Apresentação Executiva.ipynb
+++ b/Ciências de Dados da Hashtag/Projeto Hashtag - Criando uma Apresentação Executiva.ipynb
@@ -980,7 +980,7 @@
     "2. Definindo o tipo de gráfico e os valores dos eixo X e Y (soma_ano = agrupamento do somatório das vendas por ano)\n",
     "        \n",
     "        df_vendas_ano = df_base.groupby(\"Ano\")[\"Sales\"].sum() \n",
-    "        ax.bar(X,Y, parâmetros) >>> ax.bar(df_vendas_ano.index,df_vendas_ano.values, color=\"#0830a8\") \n",
+    "        ax.bar(X,Y, parâmetros) → ax.bar(df_vendas_ano.index,df_vendas_ano.values, color=\"#0830a8\") \n",
     "\n",
     "<br>\n",
     "\n",
@@ -1035,10 +1035,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "537896f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_base' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Criando uma coluna de Ano\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m df_base[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAno\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdf_base\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOrder Date\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mdt\u001b[38;5;241m.\u001b[39myear\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_base' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Criando uma coluna de Ano\n",
     "df_base['Ano'] = df_base['Order Date'].dt.year"
@@ -1116,7 +1128,7 @@
     "* valor do eixo X = soma_mes[soma_mes.Ano == 2015].Mes.values-wid-wid/2 \n",
     "* valor do eixo Y = soma_mes[soma_mes.Ano == 2015].Sales.values\n",
     "\n",
-    "        ax.bar(X,Y, parâmetros) >>> \n",
+    "        ax.bar(X,Y, parâmetros) → \n",
     "        ax.bar(df_vendas_mes[df_vendas_mes.Ano == 2015].Mes.values-wid-wid/2, df_vendas_mes[df_vendas_mes.Ano == 2015].Sales.values, color=\"#00c698\", label=2015, width=wid )\n",
     "\n",
     "<br>\n",
@@ -1372,7 +1384,7 @@
     "* valor do eixo X = categoria[categoria.Category == 'Furniture'].Ano.values-wid\n",
     "* valor do eixo Y = categoria[categoria.Category == 'Furniture'].Sales.values\n",
     "\n",
-    "        ax.bar(X,Y, parâmetros) >>> \n",
+    "        ax.bar(X,Y, parâmetros) → \n",
     "        ax.bar(df_vendas_categoria[df_vendas_categoria.Category == 'Furniture'].Ano.values-wid, categoria[df_vendas_categoria.Category == 'Furniture'].Sales.values,\n",
     "        color=\"#00c698\", label='Furniture', width=wid)       \n",
     "      \n",
@@ -1625,7 +1637,7 @@
     "* valor do eixo X = df_top_n_produtos['Sales'].values\n",
     "* valor do eixo Y = df_top_n_produtos['Product Name'].values\n",
     "\n",
-    "        ax.barh(X,Y, parâmetros) >>>     \n",
+    "        ax.barh(X,Y, parâmetros) →     \n",
     "        ax.barh(df_top_n_produtos['Product Name'].values, df_top_n_produtos['Sales'].values, align='center')  \n",
     "        \n",
     "<br>\n",
