--- a/Data Analyst Training - Indicadores e KPIS.ipynb
+++ b/Data Analyst Training - Indicadores e KPIS.ipynb
@@ -225,7 +225,12 @@
     "12. <u>Não gera efeitos perversos:</u> Antes de validar o indicador, promova alguma reflexão para identificar os possíveis efeitos perversos e implementar medidas para os minimizar/eliminar; Por exemplo, verificar se a utilização de um determinado indicador não provoca na empresa um efeito negativo na eficácia, eficiência ou qualidade, na área em que se está a medir;\n",
     "13. <u>Possibilidade de Benchmarking:</u> Benchmarking consiste no processo de busca das melhores práticas de gestão da entidade numa determinada indústria e que conduzem ao desempenho superior; A comparação de desempenhos entre atividades, projetos, unidades de negócio, organizações, etc., é sempre útil. Para além de induzir competição, promove substancialmente a melhoria contínua. Procure uniformizar os indicadores utilizados dentro da empresa, utilizando por exemplo escalas de medição comparáveis entre si.\n",
     "14. <u>Atualizado:</u> Os indicadores devem ser rapidamente substituídos por outros, quando deixam de ser interessantes (obsoletos) ou quando surgem novas prioridades, atividades ou projetos na empresa;\n",
-    "15. <u>Possibilidade de ter uma meta:</u> A existência de uma meta é uma referência preciosa para que se possa perceber a distância que as realizações estão dos valores ideais. Os indicadores devem ter a possibilidade de ter metas anuais e intercalares, em função da frequência de monitorização estabelecida pela empresa."
+    "15. <u>Possibilidade de ter uma meta:</u> A existência de uma meta é uma referência preciosa para que se possa perceber a distância que as realizações estão dos valores ideais. Os indicadores devem ter a possibilidade de ter metas anuais e intercalares, em função da frequência de monitorização estabelecida pela empresa.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Transforme o impacto dos dados: escolha o KPI de sucesso certo !\n",
+    "> https://www.kaushik.net/avinash/transform-data-impact-pick-the-right-success-kpi/"
    ]
   },
   {
