--- a/Data Analyst Training - Projetos de Analista de Dados.ipynb
+++ b/Data Analyst Training - Projetos de Analista de Dados.ipynb
@@ -45,13 +45,15 @@
    "source": [
     "### Quando pensamos em análise de dados, geralmente pensamos apenas nos relatórios, insights ou visualizações resultantes. Embora esses produtos finais geralmente sejam o evento principal, é fácil se concentrar em fazer com que os produtos tenham uma boa aparência e ignorar a qualidade do código que os gera. E não estamos falando sobre reduzir a estética do recuo ou os padrões de formatação - em última análise, a qualidade do código é sobre correção e reprodutibilidade. <br>\n",
     "### Uma estrutura de projeto padrão e bem definida significa que um novato pode começar a entender uma análise sem se aprofundar em extensa documentação. Isso também significa que eles não precisam necessariamente ler 100% do código antes de saber onde procurar coisas muito específicas. <br>\n",
-    "### Já tentou reproduzir uma análise que você fez alguns meses atrás ou mesmo alguns anos atrás? Você pode ter escrito o código, mas agora é impossível decifrar. Criar uma documentação estruturada (Passo a passo) evitará atrasos e erros.\n",
-    "<br>\n",
-    "\n",
+    "### Já tentou reproduzir uma análise que você fez alguns meses atrás ou mesmo alguns anos atrás? Você pode ter escrito o código, mas agora é impossível decifrar. Criar uma documentação estruturada (Passo a passo) evitará atrasos e erros.<br>\n",
     "### Características principais:\n",
     "* 1 - Iterativo \n",
-    "* 2 - Reutilizável e reciclável \n",
-    "* 3 - Reproduzível"
+    "* 2 - Reutilizável e Reciclável \n",
+    "* 3 - Reproduzível\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Framework: Conjutno de códigos genéricos capaz de unir trechos de um projeto de desenvolvimento."
    ]
   },
   {
@@ -81,6 +83,8 @@
     "* Um projeto de sistemas de recomendação (Dataset Kaggle: Olist, Rees46);\n",
     "* Um projeto de teste A e B e/ou teste de hipótese;\n",
     "* Um projeto de baseado em imagem;\n",
+    "\n",
+    "<br>\n",
     "\n",
     "### Exemplos:\n",
     "1. Aumente a receita e os lucros: As empresas querem saber como você pode ganhar dinheiro. - Analisar dados de vendas, prever tendências - Previsão de regressão/série temporal mestre - Oferecer ações valiosas para atualizar sua estratégia\n",
