--- a/Data Analyst Training - Roadmap de Analista de Dados.ipynb
+++ b/Data Analyst Training - Roadmap de Analista de Dados.ipynb
@@ -27,11 +27,12 @@
     "    * Algumas atribuições\n",
     "    * Soft Skills\n",
     "    * Hard Skills\n",
+    "    * Cientista de dados\n",
     "3. [Roteiro / Roadmap (Melhororar este item)](#Roteiro-/-Roadmap:)\n",
     "4. [Método cíclico](#Método-cíclico:)\n",
     "    * Etapa 1 - Problema de negócio / Declaração do problema\n",
     "    * Etapa 2 - Definição da Baseline\n",
-    "    * Etapa 3 - Planejamento\n",
+    "    * Etapa 3 - Planejamento da solução\n",
     "    * Etapa 4 - Coleta de Dados Brutos de Fontes Confiáveis (Várias Fontes Internas e Externas)\n",
     "    * Etapa 5 - Limpeza e Processamento de Dados\n",
     "    * Etapa 6 - Análise Exploratória de Dados\n",
@@ -201,11 +202,11 @@
     "<br>\n",
     "\n",
     "### **<u>Hard Skills:</u>**\n",
-    "* Microsoft Excel\n",
+    "* Microsoft Excel (Conhecimento avançado)\n",
     "* Conhecimento de linguagem de programação: Python\n",
-    "* Conhecimento de linguagem de consulta: SQL\n",
-    "* Proficiencia em software de BI e Análise: Tableau, SAS e Rapidminer\n",
-    "* Expertise em Visualização de dados\n",
+    "* Conhecimento de linguagem de consulta: SQL \n",
+    "* Proficiência em software de BI e Análise: Tableau, SAS e Rapidminer\n",
+    "* Expertise em Visualização de dados: Power BI\n",
     "* Capacidade de minerar, analisar, modelar e interpretar dados\n",
     "* Capacidade de trabalhar com conjunto de dados grandes e complexos\n",
     "* Capacidade de implantar modelos estatísticos comercialmente viáveis\n",
@@ -227,7 +228,23 @@
     "\n",
     "<br>\n",
     "\n",
-    "<center><img width=\"40%\" src=\"_imagens/Analista de dados.jpg\"></center>"
+    "<center><img width=\"40%\" src=\"_imagens/Analista de dados.jpg\"></center>\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### **<u>Cientista de dados</u>**<br>\n",
+    "##### Algumas atribuições:\n",
+    "Prever como o negócio irá se comportar.\n",
+    "* Empregar os programas de análise, aprendizado de máquina e métodos estatísticos para preparar os dados para uso em modelagem preditiva e prescritiva.\n",
+    "* Explorar e analisar dados deuma variedade de ângulos para determinar fraquezas escondidas, tendências e/ou oportunidades.\n",
+    "* Conceber soluções orientadas a dados para os principais desafios da empresa.\n",
+    "* Criar novos algoritmos para resolver problemas e usar ferramentas para automatizar o trabalho.\n",
+    "* Atuar com o engenheiro de dados para extrair grandes volumes de dados de múltiplas fontes internas e externas.\n",
+    "* Comunicar previsções e resultados para a gestão e áreas de negócios, atráves de visualizações de dados eficazes.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "##### Automação: Fazer scripts, acessar diferentes servidores, web scrapy, agendamento de mensagens e emails e realizar tarefas repetitivas."
    ]
   },
   {
@@ -387,7 +404,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "### **<u>Etapa 3</u> - Planejamento**\n",
+    "### **<u>Etapa 3</u> - Planejamento da solução**\n",
     "* Criar um arquivo com as definições do planejamento do projeto >>> planejamento.txt \n",
     "    * Informar os pré-requisitos: Descrever quais pastas, recursos, arquivos serão criadas, que tipos de arquivos serão importados e etc.\n",
     "    * Realizar a decomposição do problema (Determine o escopo): Descrever os tópicos para resolver o problema de negócio (Usando pseudocódigos). Exemplo:\n",
@@ -420,10 +437,10 @@
     "<br>\n",
     "\n",
     "### **<u>Etapa 4</u> - Coleta de Dados Brutos de Fontes Confiáveis (Várias Fontes Internas e Externas)**\n",
-    "##### Os dados separados em vários formatos >>> Tabela RAW (Tabela única)\n",
+    "##### Os dados separados em várias tabelas diferentes (Banco de dados) >>> Tabela RAW (Tabela única)\n",
     "##### Técnicas: ETL (Extração, Transformação e Cargas), ELT (Extração, Cargas, Transformação) e Requisição em API \n",
     "##### Envolve coletar os dados de uma variedade de fontes, seja baixando manualmente ou programaticamente, copiando a web (Raspagem de sites), acessando uma API ou até mesmo conectando-se a um banco de dados. \n",
-    "* Consultas em Banco de dados (SQL e NoSQL) ou em cloud: AWS, Google e Azure\n",
+    "* Consultas em Banco de dados (SQL e NoSQL) ou em Cloud: AWS, Google e Azure\n",
     "* Arquivos nos formatos: Excel, CSV, PDF, APIs etc.\n",
     "* Raspagem de sites (Web scraping): Biblioteca BeautifulSoup, Selenium, Requests, Urllib, Scrapy, Webbot, PyAutoGUI, Keyboard e Pynput \n",
     "* Power Query: Linguagem M\n",
@@ -455,9 +472,16 @@
     "##### Técnicas: Seleção e filtragem de variáveis, Feature engineering (Funcionalidades), Validação ou rejeição das hipotéses e Análise univariada, bivariada e multivariada\n",
     "* Análise estatística - Biblioteca Numpy\n",
     "* Análise gráfica - Bibliotecas: Matplotlib, Seaborn e Plotly\n",
-    "* Levantamento de hipótese (Regressão Linear, Clusterização, Series Temporais, Árvores de Decisão, Random Forest, KNN, Redes Neurais, K-Means e Arima)\n",
-    "\n",
-    "##### OBS: Mudanças significativas nos números precisam ser alertados e investigadas e sempre comparadas com os dados de periodos anteriores.    \n",
+    "* Levantamento de hipótese: Modelos de Machine Learning (Entrada, extração de características, classificação e resultado)\n",
+    "    * Regressão Linear (Linear Regression) e Regressão Logística (Logistic Regression)\n",
+    "    * Clusterização (K-Means e Cluster Hierárquico)\n",
+    "    * Séries Temporais (Arima)\n",
+    "    * Árvores de Decisão (Decision Tree)\n",
+    "    * Floresta Aleatória (Random Forest) e Extra Trees \n",
+    "    * KNN (K-Nearest Neighbors) \n",
+    "    * Redes Neurais Artificiais (ANNs)\n",
+    "    \n",
+    "##### OBS: Mudanças significativas nos números precisam ser alertados e investigadas e sempre comparadas com os dados de períodos anteriores.    \n",
     "\n",
     "<br>\n",
     "\n",
@@ -476,16 +500,16 @@
     "#### a) Algoritmos de Machine Learning\n",
     "##### Training Data (Dados de treinamento) >>> Trained ML Models (Modelos de ML Treinados)\n",
     "##### Técnicas: Algoritmos de Classificação, Algoritmos de Regressão, Algoritmos de Clusterização, Redução de Dimensionalidade e Reinforcement Learning\n",
-    "#### b) Metricas de Perfomance (Avaliação do Algoritmo): Knowledge representation (Representação do conhecimento)\n",
+    "#### b) Métricas de Perfomance (Avaliação do Algoritmo): Knowledge representation (Representação do conhecimento)\n",
     "##### Trained ML Models (Modelos de ML Treinados) >>> Métrica de Perfomace\n",
     "##### Técnicas: Métricas de Classificação, Métricas de Regressão, Métricas de Clusterização e Impacto no negócio\n",
-    "#### c) Modelo em Produção\n",
+    "#### c) Modelo em Produção (Publicação - Deploy da aplicação)\n",
     "##### Trained ML Models (Modelos de ML Treinados) >>> Output API (Ambiente em nuvem)\n",
     "##### Técnicas: API e Tabelas de Banco de Dados\n",
     "\n",
     "<br>\n",
     "\n",
-    "### **<u>Etapa 8</u> - (Pré) Validação dos resultados com os clientes - Chegar a uma \"conclusão\" (Realizar as correções e os últimos ajustes)** (Data interpretation)\n",
+    "### **<u>Etapa 8</u> - (Pré) Validação dos resultados com os clientes - Chegar a uma \"conclusão\" (Realizar as correções e os últimos ajustes)** (Data interpretation) - Processo prototipagem\n",
     "\n",
     "<br>\n",
     "\n",
@@ -558,6 +582,7 @@
    "id": "c4d6cf43",
    "metadata": {},
    "source": [
+    "#### Dados sujos são essencialmente quaisquer dados que precisam ser manipulados ou trabalhados de alguma forma antes de serem analisados.\n",
     "* 1 - Limpe observações indesejadas = Identificação e remoção de duplicatas e dados irrelevantes (Exclusão das colunas desnecessárias)\n",
     "* 2 - Correção de inconsistências ou imprecisos (Dados desatualizados ou que contêm erros estruturais) = Convenções de nomenclatura irregular, erros de digitação e capitalização inconsistente, como categoria ou rótulo incorretos, mesmo significado com nomes diferentes, letras maiúsculas, minúsculas, uso de sublinhados, travessão e outras pontuações e espaços em branco.\n",
     "* 3 - Padronizar os dados = Cada tipo de célula siga as mesmas regras - Ex: Colocar todos em letras maíusculas ou minúsculas ou colcar os dados numéricos usem a mesma unidade de medida.\n",
@@ -776,6 +801,7 @@
    "metadata": {},
    "source": [
     "##### - É uma investigação inicial do conjunto de dados, onde procura entender e resumir suas principais características. Entender como são estruturados, identificar padrões e tendências em potencial e detectar quaisquer anomalias. Além de determinar se os métodos de análise que planeja usar posteriormente são realmente apropriados para o conjunto de dados.  <br>\n",
+    "##### - Estatística descritiva ajudam a resumir ou descrever as características do conjunto de dados de maneira significativa. Além de detectar possíveis erros ou ocorrências estranhas no conjunto de dados e testar hipotéses iniciais. Principais tipos de estatística descritiva: Distribuição de frequência (Mostra quantas vezes um determinado valor ocorre no conjunto), Medidas de tendência central (Média, Mediana e Moda) e Medidas de variabilidade (Intervalo, Desvio padrão e Variância) <br>\n",
     "##### - Tem como objetivo: Conhecer a situação dos dados. Se familiarizar com dados. Adquirir um conhecimento (ato ou efeito de conhecer/ato de perceber ou compreender por meio da razão e/ou da experiência) <br>\n",
     "##### - É um processo de exploração e descoberta de padrões e relações por meio de técnicas estatísticas e visualizações relevantes. O objetivo é entender melhor os dados e obter insights valiosos que possam orientar futuras análises.(Geração de insights) <br>\n",
     "##### - Geralmente é realizada antes que uma hipótese firme ou um objetivo final seja definido. <br>\n",
