--- a/Data Analystic da FGV/Data Analystic da FGV.ipynb
+++ b/Data Analystic da FGV/Data Analystic da FGV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9dd48f35",
+   "id": "704d8db6",
    "metadata": {},
    "source": [
     "<center><img width=\"25%\" src=\"https://www.camaramirimdoce.sc.gov.br/media/noticia/resumo-da-sessao-10-06-2019-111.png?w=848&h=450&t=P&c=f0f0f0&q=80&v=2\"></center>\n",
@@ -11,29 +11,19 @@
     "\n",
     "<br>\n",
     "\n",
-    "# Data Analystic Microsoft\n",
+    "# Data Analystic da FGV\n",
     "\n",
-    "<br>"
+    "<br>\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "821d2bb1",
+   "id": "96b175ad",
    "metadata": {},
    "source": [
-    "* Comece a usar a análise de dados da Microsoft > https://learn.microsoft.com/pt-br/training/modules/data-analytics-microsoft/1-introduction\n",
-    "* Preparar dados para análise\n",
-    "* Dados de modelo no Power BI\n",
-    "* Visualizar dados no Power BI\n",
-    "* Análise de dados no Power BI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "738b46be",
-   "metadata": {},
-   "source": [
-    "Introdução"
+    "## Dados e Informação: Entendendo e Formulando Perguntas <br>\n",
+    "> https://educacao-executiva.fgv.br/cursos/online/curta-media-duracao-online/dados-e-informacao-entendendo-e-formulando-perguntas"
    ]
   }
  ],
