--- a/Ferramentas úteis de IA.ipynb
+++ b/Ferramentas úteis de IA.ipynb
@@ -10,13 +10,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b51bfa21",
    "metadata": {},
    "outputs": [],
    "source": [
     "# As superferramentas do The Rundown facilitam a localização dos melhores recursos de IA.\n",
     "# https://supertools.therundown.ai/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba4fe8fb",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "- Descript App: Edite seu podcast apenas editando a transcrição. Edição de som como se estivesse editando um documento do Word.\n",
+    "- Estúdio Mágico: Edite as partes das fotos que você não precisa de forma muito fácil. É só carregar a foto, selecionar a parte que você não quer e ele apaga.\n",
+    "- Tweet Hunter: Encontra uma nova inspiração para tweets, gera iniciadores de thread e reescreve o conteúdo com IA.\n",
+    "- Narakeet: Cria dublagens realistas para seus vídeos. Você seleciona a voz e obtém áudio e vídeo profissionais em minutos.\n",
+    "- Riverside: Grava seu podcast localmente, usa IA para manter o alto-falante certo à vista, silencia sons desnecessários e produz podcasts com qualidade de estúdio para você.\n",
+    "- Poised.com: Use esta ferramenta para melhorar suas habilidades de falar em público. Esta ferramenta AI ajuda você a diminuir suas palavras de preenchimento, melhorar sua energia e falar com confiança e clareza em todas as reuniões.\n",
+    "- Kickresume.com: Você pode usar o criador de currículos com tecnologia AI para gerar automaticamente todo o seu currículo.\n",
+    "- Usechannel.com: Obtenha as respostas de que você precisa sem conhecer o SQL.\n",
+    "- WonderAI: Os usuários testam sua imagem imaginada e o mecanismo WonderAI cria arte incrível.\n",
+    "- Monsterapi.ai: Acesse modelos de IA como difusão estável usando APIs acessíveis, escaláveis e fáceis de usar.\n",
+    "- Brightdata.com: Transforme sites em dados estruturados\n",
+    "- https://interiorai.com/\n",
+    "- https://excelformulabot.com/"
    ]
   },
   {
@@ -52,7 +74,7 @@
    "id": "500612f3",
    "metadata": {},
    "source": [
-    "* ChatGPT\n",
+    "* ChatGPT (Bot de IA capaz de gerar respostas impressionantemente detalhadas de forma humana para suas perguntas)\n",
     "* ChatGPT para equipes\n",
     "> https://chatabc.ai/\n",
     "* Aiseo (Ferramenta de escrita)\n",
@@ -153,7 +175,9 @@
     "* yatterplus (Assistente para WhatsApp)\n",
     "> https://yatterplus.in/\n",
     "* finalscout (Transmissão para LinkedIn)\n",
-    "> https://finalscout.com/"
+    "> https://finalscout.com/\n",
+    "* AI Code Translator (Insira o código em qualquer idioma e o GPT-4 o traduzirá para qualquer outra linguagem de codificação)\n",
+    "> https://ai-code-translator.vercel.app/"
    ]
   },
   {
@@ -178,7 +202,8 @@
     "* TLDV (Resumo da Reunião)\n",
     "> https://tldv.io/\n",
     "* Stockimg (Criação de Logotipos, Papel de parede e Capas de livros)\n",
-    "> https://stockimg.ai/"
+    "> https://stockimg.ai/\n",
+    "* Supernormal app (Faz anotações detalhadas e transcreve reuniões. Basta conectar a conta do GMeet ou Zoom que ele faz o resto para você)"
    ]
   },
   {
