--- a/Data Analystic da Preditiva/Nível 3 - Data Science (Parte A - Fundamentos).ipynb
+++ b/Data Analystic da Preditiva/Nível 3 - Data Science (Parte A - Fundamentos).ipynb
@@ -172,7 +172,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "29e0e15a",
    "metadata": {},
@@ -620,7 +619,35 @@
    "metadata": {},
    "source": [
     "### <u>Configuração do ambiente Python</u> <br>\n",
+    "* Ambiente virtual\n",
+    "    * cd\n",
+    "    * python -m venv NomeDoAmbienteVirtual\n",
+    "    * activate\n",
+    "    * python m pip install upgrade pip\n",
+    "    * pip list\n",
+    "    * dir\n",
+    "    * pip install -r requirements.txt\n",
+    "    * pip install jupyterlab\n",
+    "    * pip freeze > requirements.txt\n",
+    "\n",
+    "<br>\n",
+    "\n",
     "### <u>Parte 1: Introdução ao Python</u> <br>\n",
+    "* Estruturas de dados:\n",
+    "    * Variáveis\n",
+    "    * Tipos de dados\n",
+    "    * Lista, Dicionário, Tupla e Sets\n",
+    "    * print(), type(), indexação (Acessar os itens da lista), append(), count(), remove(), get(), pop(), adicionando itens no dicionário usando dict[chave]=values, keys() e Values()\n",
+    "* Estruturas de controle: if, else e for ...in, and e enumerate\n",
+    "* Organização e Escalada com Funções e Classes (SHIFT + TAB = Lê as funções)\n",
+    "    * def NomeDaFunção():\n",
+    "    * if isintance(Estrutura, dict/list/set/tuple):\n",
+    "    * class NomeDaClesse:\n",
+    "    * def __init___(self,...):\n",
+    "        self.metodo = valor\n",
+    "        \n",
+    "<br>\n",
+    "\n",
     "### <u>Parte 2: Tratamento de Dados com Numpy e Pandas</u> <br>\n",
     "### <u>Parte 3: Visualizando dados com o Matplotlib</u> <br>\n",
     "### <u>Parte 4: Modelagem Estatística e Machine Learning</u> <br>\n",
